[gd_scene load_steps=24 format=3 uid="uid://po63m4srixl4"]

[ext_resource type="PackedScene" uid="uid://0t0qb3qjq6my" path="res://Scenes/PlatformRed.tscn" id="2_4lh3q"]
[ext_resource type="PackedScene" uid="uid://cf0w0skqs3k64" path="res://Scenes/player.tscn" id="2_21dfl"]
[ext_resource type="PackedScene" uid="uid://dfc0ecsjufu7v" path="res://Scenes/PlatformBlue.tscn" id="3_mj5wy"]
[ext_resource type="PackedScene" uid="uid://47ngaewj6ruq" path="res://Scenes/mover.tscn" id="4_3l3om"]
[ext_resource type="Script" path="res://Scripts/DeadZone.gd" id="4_8ry15"]
[ext_resource type="PackedScene" uid="uid://bk5n0tn4k1l0c" path="res://Scenes/Coin.tscn" id="5_4fiv6"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="6_8fvkd"]
[ext_resource type="Texture2D" uid="uid://cnbbny7qjh2xn" path="res://Assets/Textures/coin.png" id="7_ow7xm"]
[ext_resource type="Script" path="res://Scripts/GameUI.gd" id="7_x8whp"]
[ext_resource type="Texture2D" uid="uid://hk3gj75327hy" path="res://Assets/Textures/Logo.png" id="9_46gx6"]
[ext_resource type="Texture2D" uid="uid://bc82bl5ct7xkc" path="res://Assets/Ui/ButtonPressed.png" id="10_54g5c"]
[ext_resource type="Texture2D" uid="uid://cfmslu2ysvonx" path="res://Assets/Ui/Panel 2Blue.png" id="10_fn6pa"]

[sub_resource type="Environment" id="Environment_g4ka7"]
background_mode = 1
background_color = Color(0.521569, 0.803922, 0.976471, 1)
ambient_light_source = 2
ambient_light_color = Color(0.662745, 0.694118, 0.772549, 1)
ambient_light_energy = 1.15
tonemap_mode = 2
tonemap_exposure = 0.75
ssr_enabled = true
ssao_enabled = true
ssao_radius = 0.45
ssao_intensity = 1.0
ssao_power = 15.0
ssil_enabled = true
sdfgi_use_occlusion = true
glow_enabled = true
glow_intensity = 2.0
fog_light_color = Color(0.647059, 0.678431, 0.72549, 1)
volumetric_fog_temporal_reprojection_enabled = false
adjustment_enabled = true
adjustment_brightness = 1.06
adjustment_contrast = 0.95
adjustment_saturation = 1.09

[sub_resource type="SystemFont" id="SystemFont_om7om"]
font_names = PackedStringArray("Star Choco")

[sub_resource type="SystemFont" id="SystemFont_ub50t"]
font_names = PackedStringArray("Star Choco")

[sub_resource type="BoxShape3D" id="BoxShape3D_asf4q"]
size = Vector3(128, 17, 112)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_03vpg"]
texture = ExtResource("10_fn6pa")
expand_margin_left = 80.0
expand_margin_top = 80.0
expand_margin_right = 80.0
expand_margin_bottom = 80.0

[sub_resource type="SystemFont" id="SystemFont_1ixsq"]
font_names = PackedStringArray("Star Choco")
multichannel_signed_distance_field = true

[sub_resource type="SystemFont" id="SystemFont_656xb"]
font_names = PackedStringArray("Star Choco")

[sub_resource type="LabelSettings" id="LabelSettings_igq7x"]
font = SubResource("SystemFont_656xb")
font_size = 50
font_color = Color(0.996094, 0.691406, 0.261719, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ihkkb"]
texture = ExtResource("10_54g5c")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ha08"]
texture = ExtResource("10_54g5c")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qjyce"]
texture = ExtResource("10_54g5c")

[node name="DemoScene" type="Node3D"]

[node name="Player" parent="." instance=ExtResource("2_21dfl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0682774, 3.60331, -1.58581)

[node name="Platforms" type="Node3D" parent="."]

[node name="PlatformRed" parent="Platforms" instance=ExtResource("2_4lh3q")]
transform = Transform3D(3.9312, 0, 0, 0, 0.39312, 0, 0, 0, 3.9312, 0.0200105, 4, -21.997)

[node name="PlatformRed2" parent="Platforms" instance=ExtResource("2_4lh3q")]
transform = Transform3D(3.9312, 0, 0, 0, 0.39312, 0, 0, 0, 3.9312, 19.02, 6, -20.997)

[node name="PlatformRed4" parent="Platforms" instance=ExtResource("2_4lh3q")]
transform = Transform3D(3.9312, 0, 0, 0, 0.39312, 0, 0, 0, 3.9312, 18.02, 8, 7.003)

[node name="PlatformRed3" parent="Platforms" instance=ExtResource("2_4lh3q")]
transform = Transform3D(-2.31982e-07, 0, -5.30712, 0, 0.530712, 0, 5.30712, 0, -2.31982e-07, 19.1933, 10, 48.649)

[node name="PlatformBlue" parent="Platforms" instance=ExtResource("3_mj5wy")]
transform = Transform3D(3.90286, 0, 0, 0, 0.864, 0, 0, 0, 3.90286, 0, 3, 0)

[node name="PlatformBlue2" parent="Platforms" instance=ExtResource("3_mj5wy")]
transform = Transform3D(3.90286, 0, 0, 0, 0.864, 0, 0, 0, 3.90286, 0, 4.01868, -10.7155)

[node name="PlatformBlue5" parent="Platforms" instance=ExtResource("3_mj5wy")]
transform = Transform3D(3.90286, 0, 0, 0, 0.864, 0, 0, 0, 3.90286, 19, 6.01868, -2.7155)

[node name="PlatformBlue3" parent="Platforms" instance=ExtResource("3_mj5wy")]
transform = Transform3D(3.90286, 0, 0, 0, 0.864, 0, 0, 0, 3.90286, 10, 5.01868, -21.7155)

[node name="PlatformBlue7" parent="Platforms" instance=ExtResource("3_mj5wy")]
transform = Transform3D(-1.70599e-07, 0, -3.90286, 0, 0.864, 0, 3.90286, 0, -1.70599e-07, 18.9119, 8.01868, 26.629)

[node name="Mover1" parent="Platforms" instance=ExtResource("4_3l3om")]
transform = Transform3D(3.90286, 0, 0, 0, 0.864, 0, 0, 0, 3.90286, 19, 6, -12)
max = 8
speed = 10

[node name="Mover2" parent="Platforms" instance=ExtResource("4_3l3om")]
transform = Transform3D(3.90286, 0, 0, 0, 0.864, 0, 0, 0, 3.90286, 18.9119, 8.01868, 16.629)
moveback = false

[node name="Mover3" parent="Platforms" instance=ExtResource("4_3l3om")]
transform = Transform3D(3.90286, 0, 0, 0, 0.864, 0, 0, 0, 3.90286, 18.9119, 8.01868, 36.6291)
moveback = true

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_g4ka7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.898603, 0.438763, 2.98254e-08, 0.146657, 0.300359, 0.942484, 0.413527, 0.846919, -0.334251, 9.04457, 6.63937, -28.4749)
shadow_enabled = true

[node name="Extras" type="Node3D" parent="."]

[node name="SpawnPosition" type="Marker3D" parent="Extras"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="Sprite3D" type="Sprite3D" parent="Extras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, -40)
texture = ExtResource("9_46gx6")

[node name="Features" type="Label3D" parent="Extras"]
transform = Transform3D(-0.0320388, 0, 0.999487, 0, 1, 0, -0.999487, 0, -0.0320388, -13.5119, 7.48323, 1.06991)
modulate = Color(0.596078, 0.101961, 0, 1)
outline_modulate = Color(0.141176, 0.376471, 0.933333, 1)
text = "Artificial intelligence (ai)
and integrated library 
systems (ils)
"
font = SubResource("SystemFont_om7om")
font_size = 250
outline_size = 25
uppercase = true

[node name="Credits" type="Label3D" parent="Extras"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.0336823, 4.71136, 8.82437)
visible = false
text = "Platform Models By: Rayyan Aziz
Character By: GDQuest
Programming & Level Design: Adil Shafiq"
font = SubResource("SystemFont_ub50t")
font_size = 100
outline_size = 0
uppercase = true

[node name="Coins" type="Node3D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.36921, -22)
shit = "Defining AI and ILS"

[node name="Coin2" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 7.36921, -21.6303)
shit = "Exploring Examples of AI and ILS"

[node name="Coin3" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.1423, 9.06635, 7.0647)
shit = "Potential Benefits and Challenges of AI and ILS"

[node name="Coin4" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.9894, 11.7654, 48.5274)
shit = "Future Directions and Opportunities for Evolving AI and ILS"

[node name="GameManager" type="Node3D" parent="."]
script = ExtResource("6_8fvkd")

[node name="DeadZone" type="Area3D" parent="."]
script = ExtResource("4_8ry15")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeadZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9, 0)
shape = SubResource("BoxShape3D_asf4q")

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UserInterface"]
layout_mode = 3
anchors_preset = 0
offset_right = 1264.0
offset_bottom = 688.0
script = ExtResource("7_x8whp")

[node name="Part1" type="Label" parent="UserInterface/GameUI"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
offset_left = 128.0
offset_top = 112.0
offset_right = 1040.0
offset_bottom = 552.0
theme_override_colors/font_color = Color(0.34902, 0.690196, 0.976471, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_03vpg")
autowrap_mode = 3

[node name="CoinTexture" type="TextureRect" parent="UserInterface/GameUI"]
layout_mode = 2
offset_left = -192.0
offset_top = 16.0
offset_right = -123.0
offset_bottom = 85.0
texture = ExtResource("7_ow7xm")
expand_mode = 1
stretch_mode = 4

[node name="CoinsLabel" type="Label" parent="UserInterface/GameUI"]
layout_mode = 2
offset_left = -88.0
offset_top = 112.0
offset_right = -15.0
offset_bottom = 181.0
theme_override_colors/font_color = Color(0.996094, 0.710938, 0.261719, 1)
theme_override_colors/font_outline_color = Color(0.644531, 0.410156, 0.1875, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_1ixsq")
theme_override_font_sizes/font_size = 48
text = "X 3"
label_settings = SubResource("LabelSettings_igq7x")

[node name="Button" type="Button" parent="UserInterface/GameUI"]
layout_mode = 2
offset_left = 624.0
offset_top = 592.0
offset_right = 776.0
offset_bottom = 661.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_ihkkb")
theme_override_styles/hover = SubResource("StyleBoxTexture_ihkkb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ihkkb")
text = "Next"

[node name="Close" type="Button" parent="UserInterface/GameUI"]
layout_mode = 2
offset_left = 424.0
offset_top = 592.0
offset_right = 576.0
offset_bottom = 661.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_ihkkb")
theme_override_styles/hover = SubResource("StyleBoxTexture_4ha08")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qjyce")
text = "Close"

[connection signal="body_entered" from="DeadZone" to="DeadZone" method="_on_body_entered"]
[connection signal="pressed" from="UserInterface/GameUI/Button" to="UserInterface/GameUI" method="_on_button_pressed"]
[connection signal="pressed" from="UserInterface/GameUI/Close" to="UserInterface/GameUI" method="_on_close_pressed"]

[editable path="Platforms/PlatformRed"]
